fix: fixed z-index of swiper

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -663,6 +663,7 @@ footer {
     position: fixed;
     width: 100%;
     top: 0px;
+    z-index: 9999 !important;
     height: 3.56em;
     background: rgba(5, 22, 33, 0.7);
     backdrop-filter: blur(16px);
@@ -983,12 +984,13 @@ footer {
   .swiper-container {
     width: 100%;
     height: auto;
-
+    z-index: 1 !important;
     margin-bottom: 3em;
   }
 
   .swiper-wrapper {
     gap: 0em;
+    z-index: 1 !important;
   }
 
   .swiper-slide {
@@ -997,7 +999,7 @@ footer {
 
   .swiper-image-mobile {
     display: inline;
-
+    z-index: 1 !important;
     width: 11.25em;
     height: 10.63em;
   }
@@ -1008,6 +1010,7 @@ footer {
     height: 1.5em;
     top: 4.5em;
     right: 0.7em;
+    z-index: 1 !important;
   }
 
   .swiper-items {
@@ -1017,12 +1020,14 @@ footer {
     justify-content: space-between;
     align-items: space-between;
     margin: 0 auto 5em;
+    z-index: 1 !important;
   }
 
   .swiper-scrollbar {
     height: 0.2em;
     width: 13.5em;
     background-color: #102938 !important;
+    z-index: 1 !important;
   }
 
   /* Partnership Mobile
